k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  template:
    metadata:
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
      - name: dashboard
        image: bstsregistry.azurecr.io/dashboard:latest
        ports:
          - containerPort: 9000
      restartPolicy: Always
